fix style on mobile

--- a/style.css
+++ b/style.css
@@ -11,6 +11,30 @@ img {
     height: 150px;
 }
 
+html, body {
+    scroll-snap-type: y proximity;
+    scroll-behavior: smooth;
+    
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.menu {
+    display: flex;
+    min-width:500px; 
+    margin: 0 auto;
+}
+
+.title {
+    flex: 1; 
+    text-align: center;
+    margin-top: 0px; 
+    min-width: 150px; 
+}
+
+
 .boardDiv {
     margin: 0 auto;
     border-spacing:0; 
@@ -45,6 +69,7 @@ img {
     border-radius: 2px;
     margin-bottom: 20px;
     float: right;
+    margin: 10px;
 }
 
 .reset:hover {
@@ -56,8 +81,6 @@ img {
     background-color: #5c5c5c ;
     color: #ffffff;
 }
-
-
 
 /* The Modal (background) */
 .modal {
@@ -96,4 +119,39 @@ img {
     color: black;
     text-decoration: none;
     cursor: pointer;
-  }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .title {
+        flex: 0; 
+        text-align: center;
+        margin-top: 0px; 
+        min-width: 150px;
+        font-size: 27px;
+        font-weight: 200;
+    }
+    .menu :nth-child(3) {order: -2}
+    .reset {
+        font-size: 15px;
+        margin: 5px;
+    }
+    .button {
+        height: 35px;
+        width: 35px;
+    }
+    .menu {
+        display: flex;
+        flex-direction: column;
+        min-width:320px; 
+        margin: 0 auto;
+        align-items: center;
+        margin-bottom: 5px;
+    }
+    ::-webkit-scrollbar:horizontal {
+        display: none;
+    }
+    body, head {
+        overflow-x: hidden;
+    }
+}
